--- a/ifusion/package.json
+++ b/ifusion/package.json
@@ -20,7 +20,10 @@
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/utils": "^3.0.0",
+    "@monaco-editor/react": "^4.6.0",
     "electron-updater": "^6.1.7",
+    "monaco-editor": "^0.52.2",
+    "prettier": "^3.4.2",
     "react-icons": "^5.4.0"
   },
   "devDependencies": {
@@ -36,10 +39,10 @@
     "electron-vite": "^2.3.0",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.3",
-    "prettier": "^3.3.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "vite": "^5.3.1",
+    "vite": "^6.0.0-alpha.24",
+    "vite-plugin-monaco-editor": "^1.1.0",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.0"
